--- a/ui/src/scss/index.scss
+++ b/ui/src/scss/index.scss
@@ -1,3 +1,3 @@
-@import '~carbon-components/scss/globals/scss/styles.scss';
+// Import Carbon styles (individually) here
 
 // Import all other .scss files here
