feat:  Add ConsumerMessages/ProducerMessages group components
- This commit adds the ConsumerMessages and ProducerMessages
 components, providing components that represent a list of produced or
 consumed Kafka messages, displayed in a row or in a column
 respectively.

Contributes to: #56

Signed-off-by: Andrew Borley <borley@uk.ibm.com>

--- a/ui/src/Elements/Message/Message.scss
+++ b/ui/src/Elements/Message/Message.scss
@@ -5,6 +5,10 @@
         justify-content: space-between;
     }
 
+    &__tile--producer {
+      padding: $spacing-05;
+    }
+
     &__icon {
 
       &--checkmark {
