--- a/ui/src/Panels/Consumer/Consumer.scss
+++ b/ui/src/Panels/Consumer/Consumer.scss
@@ -4,10 +4,8 @@
     flex-wrap: nowrap;
     min-height: 100vh;
     background-color: $ui-01;
+    padding: 0 $spacing-07 $spacing-07 $spacing-07;
 
-    &__count {
-        margin-top: 10%;
-    }
     &__control {
         align-self: flex-end;
     }
