fix: Address review comments
- Adds and uses the SelectedMessageProvider

Contributes to: #59

Signed-off-by: Andrew Borley <borley@uk.ibm.com>

--- a/ui/src/Panels/Producer/Producer.scss
+++ b/ui/src/Panels/Producer/Producer.scss
@@ -12,9 +12,9 @@
         display: flex;
         justify-content: space-between;
     }
-    &__Message {
+    &__message {
         max-width: 20%;
-        &:not(.Producer__Message--first) {
+        &:not(.Producer__message--first) {
             margin-top: $spacing-08;
         }
     }
