--- a/ui/src/Bootstrap/index.scss
+++ b/ui/src/Bootstrap/index.scss
@@ -26,6 +26,12 @@ body {
     line-height: 1;
 }
 
+@include carbon--theme($carbon--theme--g90) {
+
+    @include tile();
+    
+}
+
 // Import all other .scss files here
 @import 'Elements/Message/Message.scss';
 @import 'Elements/Text/Text.scss';
