--- a/ui/src/Groups/Counter/Counter.scss
+++ b/ui/src/Groups/Counter/Counter.scss
@@ -13,5 +13,6 @@
         letter-spacing: 0;
         font-size: carbon--mini-units(10);
         line-height: carbon--mini-units(12);
+        margin-bottom: $layout-02;
     }
 }
