--- a/ui/src/Groups/Messages/Messages.scss
+++ b/ui/src/Groups/Messages/Messages.scss
@@ -1,14 +1,25 @@
 .Messages {
-  display: flex;
+  display: grid;
+  margin-top: $layout-03;
 
   &--consumer {
-    flex-direction: column;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: $spacing-01;
+  }
+
+  &--producer {
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: $spacing-01;
+    &-empty {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__empty {
     padding-top: $layout-03;
     margin-top: $layout-03;
     border-top: 1px solid $ui-03;
+    width: 100%;
 
     &-title-container {
       margin-bottom: $spacing-02;
